# shine

./: .gitignore  .goreleaser.yaml  BUILD_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  go.mod  go.sum  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/shine/: main.go
fixtures/: basic.md
internal/cli/: cli.go  cli_test.go
internal/config/: config.go  config_test.go
internal/inspect/: inspect.go  inspect_test.go
internal/model/: model.go
internal/parser/: parser.go  parser_test.go
internal/render/: render.go  render_test.go
internal/source/: load.go  source.go
internal/tui/: tui.go  tui_test.go
internal/version/: version.go
npm/: README.md  install.js  publish.js  publish.test.js  shine.js
src/: app.rs  config.rs  lib.rs  main.rs  model.rs  parser.rs  render.rs  theme.rs  tui.rs
tests/: parser.rs  render.rs
