[package]
name = "mdview"
version = "0.1.0"
edition = "2021"
description = "A terminal-native Markdown previewer with an owned render model."
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.28"
notify = "7.0"
pulldown-cmark = "0.9"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
syntect = "5.2"
textwrap = "0.16"
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
insta = "1.41"
tempfile = "3.14"
